# panfeed

./: CONTRIBUTING.md  README.md  environment.yml  main.py  marcos_modules.py  new_modules.py  panfeed-get-clusters-runner.py  panfeed-get-kmers-runner.py  panfeed-plot-runner.py  panfeed-runner.py  panfeed_modules.py  pyproject.toml  setup.py
.github/workflows/: unit_test_action.yml
panfeed/: __init__.py  __main__.py  classes.py  colorlog.py  get_clusters.py  get_kmers.py  input.py  panfeed.py  plot.py
scripts/: kmer2association.py  visualization.py
tests/: gene_presence_absence.csv  phenotypes.tsv  stroiall.txt  target_clusters.txt  unit_test.sh
